--- a/ReadingList/src/main/resources/application-prod.properties
+++ b/ReadingList/src/main/resources/application-prod.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/book
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=true
