--- a/ReadingList/pom.xml
+++ b/ReadingList/pom.xml
@@ -48,10 +48,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    <groupId>nl.jqno.equalsverifier</groupId>
-    <artifactId>equalsverifier</artifactId>
-    <version>3.6</version>
-    <scope>test</scope>
+            <groupId>nl.jqno.equalsverifier</groupId>
+            <artifactId>equalsverifier-nodep</artifactId>
+            <version>3.10</version>
+            <scope>test</scope>
 </dependency>
 	</dependencies>
 
